--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "version": "0.1.0",
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
+    "cheerio": "^1.0.0-rc.3",
     "gatsby": "^2.24.85",
     "gatsby-image": "^2.4.21",
     "gatsby-plugin-manifest": "^2.4.35",
@@ -13,6 +14,8 @@
     "gatsby-plugin-sharp": "^2.6.43",
     "gatsby-source-filesystem": "^2.3.35",
     "gatsby-transformer-sharp": "^2.5.19",
+    "jsdom": "^16.4.0",
+    "node-fetch": "^2.6.1",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
@@ -21,7 +24,8 @@
   "devDependencies": {
     "husky": ">=4",
     "lint-staged": ">=10",
-    "prettier": "^2.1.2"
+    "prettier": "^2.1.2",
+    "typescript": "^4.0.5"
   },
   "keywords": [
     "gatsby"
